# NaCoSAE

./: README.md  pyproject.toml
.github/workflows/: docs.yml  lint.yml  test.yml
analysis/: comparison.ipynb  concept_analysis.ipynb  cosy_eval.ipynb  generation_analysis.ipynb  get_activations_per_image.py
analysis/results/: resnet18_descriptions.csv  resnet50_places_descriptions.csv  vit_b_16_descriptions.csv
analysis/results/comparison/: evaluation_CLIP-Dissect_resnet50_places-avgpool.csv  evaluation_INVERT_resnet50_places-avgpool.csv  (+1 more)
analysis/utils/: analysis_utils.py
app/: app.py  dashboard.py
app/.streamlit/: config.toml
app/components/: plots.py
app/pages/: dashboard.py  images.py  reasoning.py
app/utils/: dashboard_utils.py  exceptions.py  history_processing.py  images_utils.py  reasoning_utils.py  results.py
checkpoints/mils/: main.py  mils_example.ipynb  paths.py
docs/source/: conf.py  index.rst
prompts/: prompt_basic.txt  prompt_mils.txt  prompt_mils_tuned.txt  prompt_utils.py
scripts/: classes.py  download_imagenet.py
src/: activation_sampling.py  calculate_control_activations.py  config.py  generator.py  history_managing.py  image_processing.py  main.py  main_test_lm.py  mils.py  pipeline.py  prompt_utils.py  scorer.py  scoring.py
src/model/: concept_history.py  explained_model.py  image_model.py  language_model.py  model.py
src/prompts/: prompt_utils.py
tests/: activation_sampling_test.py  generator_test.py  history_managing_test.py  image_processing_test.py  scoring_test.py
tests/model/: concept_history_test.py  explained_model_test.py  image_model_test.py
tests/prompts/: prompt_utils_test.py
(+2349 files in other folders)
