[project]
name = "nacosae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "absl-py>=2.3.1",
    "diffusers>=0.35.2",
    "huggingface-hub>=0.36.0",
    "immutabledict>=4.2.2",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pytest-mock>=3.15.1",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
]

[tool.pytest.ini_options]
pythonpath = "src"
